# pls

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: db.rs  main.rs  quotes.rs  tests.rs  weather.rs
