[package]
name = "pls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0" }
clap = { version = "4.0.18" }
directories-next = "2.0.0"
pickledb = { git = "https://github.com/sigaloid/pickledb-rs" }
serde = { version = "1.0.147" }
tegen = "0.1.4"
term-table = "1.3.2"
time = { version = "0.3.16", features = ["local-offset", "formatting"] }
yansi = "0.5.1"
casual = "0.2.0"
ctrlc = "3.2.3"
spinach = "2.1.0"

[dev-dependencies]
sealed_test = "1.0.0"

[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
