[package]
name = "pls"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9.6", default-features = false, features = ["native-tls"] }
clap = "4.5.4"
directories-next = "2.0.0"
pickledb = { git = "https://github.com/sigaloid/pickledb-rs" }
serde = { version = "1.0.197" }
tegen = "0.1.4"
term-table = "1.3.2"
time = { version = "0.3.34", features = ["local-offset", "formatting", "macros"] }
yansi = "1.0.1"
casual = "0.2.0"
ctrlc = "3.4.4"
spinach = "2.1.0"
native-tls = "0.2.11"

[dev-dependencies]
sealed_test = "1.0.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
